fix z-index issue with invisible login in side-header

--- a/sass/components/_glazed-header--side.scss
+++ b/sass/components/_glazed-header--side.scss
@@ -178,7 +178,7 @@
     height: 100%;
     .navbar-header {
       float: none;
-      z-index: 4001;
+      z-index: 4060;
       position: relative;
       .logo,
       .navbar-brand {
